test/extern/kbrady/extern_string_generic.chpl
extern proc printf(format: c_string, args ...);
var s:string = "test\n";
printf("%s", s);
printf("%s", s);
printf("%s", s);
printf("%s", s);
